# Code-Challenge

./: README.md  agents.md  docker-compose.yml
backend/: Dockerfile  Makefile  README.md  pyproject.toml
backend/src/: __init__.py  agents.py  main.py  models.py
backend/tests/: conftest.py  test_flow.py  test_integration.py  test_substitution.py
data/: test-recipe.txt
docs/: page.tsx
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: AppHeader.tsx  AppSessionShell.tsx  AssistantPanel.tsx  RecipePanel.tsx  UploadPanel.tsx  VoiceInputControl.tsx
frontend/src/hooks/: useVoiceInput.ts
runtime/: README.md  package-lock.json  package.json
runtime/src/: server.ts
